# scarab

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  platformio.ini
lib/Characteristics/src/: Characteristic.cpp  Characteristic.h  DeviceCharacteristic.h  DeviceService.cpp  DeviceService.h  Packet.cpp  Packet.h  Service.cpp  Service.h  ServiceFactory.cpp  ServiceFactory.h  SwitchCharacteristic.cpp  SwitchCharacteristic.h  SwitchService.cpp  SwitchService.h
lib/Device/src/: DeviceCharacteristic.cpp  DeviceService.h
lib/Scarab/src/: Service.cpp
lib/Scarab/src/Service/Device/: DeviceCharacteristic.cpp  DeviceCharacteristic.h  DeviceService.h
lib/Scarab/src/Service/Switch/: SwitchCharacteristic.h
lib/ServiceFactory/src/: ServiceFactory.cpp
src/: Characteristic.cpp  Characteristic.h  Packet.cpp  Packet.h  Service.cpp  Service.h  common.h  main.cpp
src/Packet/: ReadPacket.cpp  ReadPacket.h  ResponsePacket.cpp  ResponsePacket.h  WritePacket.cpp  WritePacket.h
src/Service/Device/: DeviceCharacteristic.cpp  DeviceCharacteristic.h  DeviceService.cpp  DeviceService.h
src/Service/Switch/: SwitchCharacteristic.cpp  SwitchCharacteristic.h  SwitchService.cpp  SwitchService.h
test/: Packet.cpp
test/Packet/: ReadPacket.cpp  ResponsePacket.cpp
